fix(ui): dark mode fixes

--- a/weblate/static/style-dark.css
+++ b/weblate/static/style-dark.css
@@ -2075,10 +2075,6 @@ button.list-group-item-danger.active:focus {
 .card > .card-collapse > .list-group:first-child .list-group-item:first-child {
   border-top-color: currentcolor;
 }
-.card > .list-group:last-child .list-group-item:last-child,
-.card > .card-collapse > .list-group:last-child .list-group-item:last-child {
-  border-bottom-color: currentcolor;
-}
 .card > .card-body + .table,
 .card > .card-body + .table-responsive,
 .card > .card + .card-body,
@@ -2287,11 +2283,6 @@ button.close {
 .btn-close:focus {
   color: #fffdfa;
   text-decoration-color: currentcolor;
-}
-button.btn-close {
-  background-color: transparent;
-  background-image: none;
-  border-color: currentcolor;
 }
 .modal {
   outline-color: currentcolor;
@@ -2611,6 +2602,9 @@ a.green:hover path {
   fill: #3c4240;
 }
 .panel-heading .doc-link path {
+  fill: #d9d3cc;
+}
+.card-header .doc-link path {
   fill: #d9d3cc;
 }
 .panel-danger > .panel-heading {
